--- a/stylesheets/app.css
+++ b/stylesheets/app.css
@@ -2344,10 +2344,33 @@ a.th { display: block; }
 .feature-output { background: #FFFFFF; -moz-box-shadow: inset 0px 2px 2px 0px rgba(0, 0, 0, 0.29); -webkit-box-shadow: inset 0px 2px 2px 0px rgba(0, 0, 0, 0.29); box-shadow: inset 0px 2px 2px 0px rgba(0, 0, 0, 0.29); }
 
 /* line 67, ../sass/app.scss */
-#magnets { background: #31373B; }
+#magnets { background: #31373B; padding: 0; }
 
-/* line 70, ../sass/app.scss */
-.magnet-section-title { -moz-box-shadow: inset 3px 0px 3px 0px rgba(0, 0, 0, 0.18); -webkit-box-shadow: inset 3px 0px 3px 0px rgba(0, 0, 0, 0.18); box-shadow: inset 3px 0px 3px 0px rgba(0, 0, 0, 0.18); }
+/* line 71, ../sass/app.scss */
+.magnet-section-title { -moz-box-shadow: inset 3px 0px 3px 0px rgba(0, 0, 0, 0.18); -webkit-box-shadow: inset 3px 0px 3px 0px rgba(0, 0, 0, 0.18); box-shadow: inset 3px 0px 3px 0px rgba(0, 0, 0, 0.18); color: rgba(0, 0, 0, 0.35); font-size: 1.5em; padding: 10px 0.9375em !important; margin: 0 0 0.9375em; }
 
-/* line 76, ../sass/app.scss */
-#givens .magnet-section-title { background: #6EBB9B; color: rgba(0, 0, 0, 0.35); }
+/* line 80, ../sass/app.scss */
+.magnet-list { list-style-type: none; padding: 10px 0.9375em !important; }
+
+/* line 84, ../sass/app.scss */
+.magnet { border-radius: 3px; background: #EEEFF2; border: 1px solid rgba(0, 0, 0, 0.35); color: #31373B; cursor: move; font-size: 0.75em; margin-bottom: 5px; padding: 0.625em 1.25em 0.625em 0.625em; position: relative; }
+/* line 94, ../sass/app.scss */
+.magnet span { display: block; height: 100%; position: absolute; right: 0; top: 0; width: 0.625em; }
+/* line 103, ../sass/app.scss */
+.magnet.given span { background-color: #6EBB9B; }
+/* line 108, ../sass/app.scss */
+.magnet.when span { background-color: #FCAA78; }
+/* line 113, ../sass/app.scss */
+.magnet.then span { background-color: #D58477; }
+
+/* line 119, ../sass/app.scss */
+#givens .magnet-section-title { background: #6EBB9B; }
+
+/* line 124, ../sass/app.scss */
+#whens .magnet-section-title { background: #FCAA78; }
+
+/* line 129, ../sass/app.scss */
+#thens .magnet-section-title { background: #D58477; }
+
+/* line 134, ../sass/app.scss */
+.scenario-new { background-color: #9B9B9B; margin-right: 30px; }
