--- a/sass/_settings.scss
+++ b/sass/_settings.scss
@@ -26,7 +26,7 @@ $em-base: 16px !default;
 // $default-float: left;
 
 // $body-bg: #fff;
-// $body-font-color: #222;
+$body-font-color: #41484D;
 $body-font-family: Arial, "Helvetica Neue", "Helvetica", Helvetica, sans-serif;
 // $body-font-weight: normal;
 // $body-font-style: normal;
@@ -126,7 +126,7 @@ $body-font-family: Arial, "Helvetica Neue", "Helvetica", Helvetica, sans-serif;
 $header-font-family: ArialRoundedMTBold, Arial, sans-serif;
 // $header-font-weight: bold;
 // $header-font-style: normal;
-// $header-font-color: #222;
+$header-font-color: #41484D;
 // $header-line-height: 1.4;
 // $header-top-margin: .2em;
 // $header-bottom-margin: .5em;
@@ -135,8 +135,8 @@ $header-font-family: ArialRoundedMTBold, Arial, sans-serif;
 // Heading font sizes
 
 // $h1-font-size: emCalc(44px);
-// $h2-font-size: emCalc(37px);
-// $h3-font-size: emCalc(27px);
+$h2-font-size: emCalc(21px);
+$h3-font-size: emCalc(16px);
 // $h4-font-size: emCalc(23px);
 // $h5-font-size: emCalc(18px);
 // $h6-font-size: 1em;
