Updated layout to be full-width & began to work on the Feature Output functionality

--- a/sass/_settings.scss
+++ b/sass/_settings.scss
@@ -99,7 +99,7 @@ $body-font-family: Arial, "Helvetica Neue", "Helvetica", Helvetica, sans-serif;
 //
 // Grid Variables
 //
-
+$row-width: auto;
 // $row-width: emCalc(1000px);
 // $column-gutter: emCalc(30px);
 // $total-columns: 12;
